--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -22,7 +22,26 @@
   overflow: hidden;
   position: absolute;
 }
-@media (max-width: 1440px) {
+
+@media (max-width: 1499px) {
+  .slidingHorizontal span {
+    top: -88px;
+    left: 0px;
+  }
+  .slidingHorizontal span:nth-child(2) {
+    top: -44px;
+    left: 0px;
+  }
+  .slidingHorizontal span:nth-child(3) {
+    top: -44px;
+    left: 0px;
+  }
+  .slidingHorizontal span:nth-child(4) {
+    top: -44px;
+    left: 0px;
+  }
+}
+@media (min-width: 1500px) {
   .slidingHorizontal span {
     top: -88px;
     left: 0px;
