--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,14 +18,14 @@
     @apply rounded-full flex items-center justify-center px-3 py-2 cursor-pointer;
   } */
   .nav-bar-container {
-    @apply py-2 flex fixed lg:w-auto lg:h-auto top-20 lg:top-0 lg:opacity-100 right-0 lg:static border-t-2 lg:border-t-0 border-gray-100 border-solid overflow-auto lg:overflow-visible;
+    @apply flex justify-center items-center fixed top-20 right-0  ;
   }
 
   .nav-bar-menu-ul {
     @apply block lg:m-auto w-full;
   }
   .nav-bar-menu {
-    @apply block lg:inline-block  lg:pl-5 px-4 lg:px-0 py-3 lg:py-0 lg:hover:bg-transparent hover:text-white ;
+    @apply block text-2xl lg:text-3xl font-bold uppercase px-4 py-3 lg:py-8 hover:text-white;
   }
   .nav-bar-has-sublink {
     @apply flex justify-between w-full  px-4 lg:px-0 py-3 lg:pb-0 lg:py-0 group-hover:bg-gray-100  border-b-2 border-gray-100 border-solid lg:border-b-0;
