--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -6,6 +6,84 @@
  <link href="css/custom.css" rel="stylesheet">
 
 */
+.dropdown_header{
+  height: 100vh;
+  transition: height 1s ease;
+}
+
+.close_dropdown_header{
+  transition: height .8s cubic-bezier(0.3, 1, 0.3, 1) .1s;
+   height: 0%; 
+}
+
+.navbar{
+    cursor: pointer;
+    padding: 0.75em;
+    /* opacity: 0; */
+    width: 240px;
+    margin-left: 3em;
+    transition: opacity .3s ease;
+    color: #ffffff;
+}
+
+.navbar :hover{
+  opacity: 1;
+  transition: opacity 2s cubic-bezier(0.16, 1.08, 0.38, 0.98) .3s;
+  width: 2rem;
+}
+.navbar .link{
+  transition: all .3s ease;
+}
+
+.height-full-viewport {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* overflow-y: auto; */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* height: 0%; */
+  background-color: #151515;
+  z-index: 5;
+  overflow: hidden;
+  /* transition: height .8s cubic-bezier(0.3, 1, 0.3, 1) .1s; */
+}
+.ms-navbar .ms-btn {
+  font-size: 1.75em;
+  letter-spacing: .02em;
+  color: #fff;
+  font-weight: 700 !important;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  
+}
+
+/* .ms-navbar {
+  
+  margin: 0 auto;
+  
+} */
+
+.link::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  background: #df1f29;
+  height: 0.1rem;
+  top: 50%;
+  width: 0;
+  transition: width .3s ease;
+}
+/* .link span{
+  display: inline-block;
+  text-transform: uppercase;
+  line-height: 1;
+  padding: 0 0.25em;
+  position: relative;} */
+
 
 .video1 {
   object-fit: cover;
@@ -356,4 +434,187 @@
   100% {
     opacity: 0;
   }
+}
+
+/*Vertical Flip*/
+.verticalFlip{
+  display: inline-block;
+  text-indent: 8px;
+  position: relative;
+  max-width: 1000px;
+}
+.verticalFlip span{
+	animation: vertical 10s linear infinite 0s;
+	-ms-animation: vertical 10s linear infinite 0s;
+	-webkit-animation: vertical 10s linear infinite 0s;
+	color: #ffffff;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+}
+
+@media (max-width: 1499px) {
+  .verticalFlip span {
+    top: -66px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(2) {
+    top: -22px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(3) {
+    top: -22px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(4) {
+    top: -22px;
+    left: 0px;
+  }
+}
+@media (min-width: 1500px) {
+  .verticalFlip span {
+    top: -66px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(2) {
+    top: -22px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(3) {
+    top: -22px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(4) {
+    top: -22px;
+    left: 0px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .verticalFlip span {
+    top: -89px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(2) {
+    top: -44px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(3) {
+    top: -44px;
+    left: 0px;
+  }
+  .verticalFlip span:nth-child(4) {
+    top: -44px;
+    left: 0px;
+  }
+}
+@media (max-width: 991.98px) {
+  .verticalFlip span {
+    top: 0px;
+    left: 220px;
+  }
+  .verticalFlip {
+    max-width: 1400px;
+  }
+  .verticalFlip span:nth-child(2) {
+    top: 40px;
+    left: 240px;
+  }
+  .verticalFlip span:nth-child(3) {
+    top: 40px;
+    left: 220px;
+  }
+  .verticalFlip span:nth-child(4) {
+    top: 40px;
+    left: 258px;
+  }
+}
+
+@media (max-width: 425px) {
+  .verticalFlip span {
+    top: -150px;
+    left: 90px;
+  }
+  .verticalFlip span:nth-child(2) {
+    top: -122px;
+    left: 100px;
+  }
+  .verticalFlip span:nth-child(3) {
+    top: -122px;
+    left: 90px;
+  }
+  .verticalFlip span:nth-child(4) {
+    top: -122px;
+    left: 100px;
+  }
+}
+.verticalFlip span:nth-child(2) {
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
+}
+.verticalFlip span:nth-child(3) {
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+}
+.verticalFlip span:nth-child(4) {
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s;
+}
+.verticalFlip span:nth-child(5){
+	animation-delay: 10s;
+	-ms-animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+}
+
+/* .verticalFlip span:nth-child(2){
+	animation-delay: 2.5s;
+	-ms-animation-delay: 2.5s;
+	-webkit-animation-delay: 2.5s;
+}
+.verticalFlip span:nth-child(3){
+	animation-delay: 5s;
+	-ms-animation-delay: 5s;
+	-webkit-animation-delay: 5s;
+}
+.verticalFlip span:nth-child(4){
+	animation-delay: 7.5s;
+	-ms-animation-delay: 7.5s;
+	-webkit-animation-delay: 7.5s;
+}
+.verticalFlip span:nth-child(5){
+	animation-delay: 10s;
+	-ms-animation-delay: 10s;
+	-webkit-animation-delay: 10s;
+} */
+
+/*Vertical Flip Animation*/
+@-moz-keyframes vertical{
+	0% { opacity: 0; }
+	5% { opacity: 0; -moz-transform: rotateX(180deg); }
+	10% { opacity: 1; -moz-transform: translateY(0px); }
+	25% { opacity: 1; -moz-transform: translateY(0px); }
+	30% { opacity: 0; -moz-transform: translateY(0px); }
+	80% { opacity: 0; }
+	100% { opacity: 0;}
+}
+@-webkit-keyframes vertical{
+	0% { opacity: 0; }
+	5% { opacity: 0; -webkit-transform: rotateX(180deg); }
+	10% { opacity: 1; -webkit-transform: translateY(0px); }
+	25% { opacity: 1; -webkit-transform: translateY(0px); }
+	30% { opacity: 0; -webkit-transform: translateY(0px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
+}
+@-ms-keyframes vertical{
+	0% { opacity: 0; }
+	5% { opacity: 0; -ms-transform: rotateX(180deg); }
+	10% { opacity: 1; -ms-transform: translateY(0px); }
+	25% { opacity: 1; -ms-transform: translateY(0px); }
+	30% { opacity: 0; -ms-transform: translateY(0px); }
+	80% { opacity: 0; }
+	100% { opacity: 0; }
 }
