--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@
     @apply rounded-full flex items-center justify-center px-3 py-2 cursor-pointer;
   } */
   .nav-bar-container {
-    @apply flex justify-center items-center fixed top-20 right-0  ;
+    @apply flex justify-between items-center fixed top-0 right-0  ;
   }
 
   .nav-bar-menu-ul {
