--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -361,11 +361,11 @@
   -ms-animation-delay: 7.5s;
   -webkit-animation-delay: 7.5s;
 }
-.fadeIn span:nth-child(5) {
+/* .fadeIn span:nth-child(5) {
   animation-delay: 10s;
   -ms-animation-delay: 10s;
   -webkit-animation-delay: 10s;
-}
+} */
 
 /*FadeIn Animation*/
 @-moz-keyframes fadeEffect {
