--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -6,34 +6,75 @@
  <link href="css/custom.css" rel="stylesheet">
 
 */
-.dropdown_header{
+.dropdown_header {
   height: 100vh;
   transition: height 1s ease;
 }
 
-.close_dropdown_header{
-  transition: height .8s cubic-bezier(0.3, 1, 0.3, 1) .1s;
-   height: 0%; 
+.close_dropdown_header {
+  transition: height 0.8s cubic-bezier(0.3, 1, 0.3, 1) 0.1s;
+  height: 0%;
 }
 
-.navbar{
-    cursor: pointer;
-    padding: 0.75em;
-    /* opacity: 0; */
-    width: 240px;
-    margin-left: 3em;
-    transition: opacity .3s ease;
-    color: #ffffff;
+.icon-scroll,
+.icon-scroll:before {
+  position: absolute;
+  left: 50%;
 }
 
-.navbar :hover{
+.icon-scroll {
+  width: 34px;
+  height: 54px;
+  margin-left: -20px;
+  /* top: 50%; */
+  bottom: 20px;
+  margin-top: -35px;
+  box-shadow: inset 0 0 0 1px #fff;
+  border-radius: 25px;
+}
+
+.icon-scroll:before {
+  content: "";
+  width: 8px;
+  height: 8px;
+  background: #fff;
+  margin-left: -4px;
+  top: 8px;
+  border-radius: 4px;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-name: scroll;
+}
+
+@keyframes scroll {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(46px);
+  }
+}
+
+.navbar {
+  cursor: pointer;
+  padding: 0.75em;
+  /* opacity: 0; */
+  width: 240px;
+  margin-left: 3em;
+  transition: opacity 0.3s ease;
+  color: #ffffff;
+}
+
+.navbar :hover {
   opacity: 1;
-  transition: opacity 2s cubic-bezier(0.16, 1.08, 0.38, 0.98) .3s;
+  transition: opacity 2s cubic-bezier(0.16, 1.08, 0.38, 0.98) 0.3s;
   width: 2rem;
-  color: #1E6EA7;
+  color: #1e6ea7;
 }
-.navbar .link{
-  transition: all .3s ease;
+.navbar .link {
+  transition: all 0.3s ease;
 }
 .sticky {
   position: fixed;
@@ -51,7 +92,6 @@
   z-index: 9999;
 }
 
-
 .height-full-viewport {
   position: fixed;
   display: flex;
@@ -66,16 +106,15 @@
   background-color: #151515;
   z-index: 5;
   overflow: hidden;
-  transition: height .8s cubic-bezier(0.3, 1, 0.3, 1) .1s;
+  transition: height 0.8s cubic-bezier(0.3, 1, 0.3, 1) 0.1s;
 }
 .ms-navbar .ms-btn {
   font-size: 1.75em;
-  letter-spacing: .02em;
+  letter-spacing: 0.02em;
   color: #fff;
   font-weight: 700 !important;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  
 }
 
 /* .ms-navbar {
@@ -85,14 +124,14 @@
 } */
 
 .link::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   background: #df1f29;
   height: 0.1rem;
   top: 50%;
   width: 0;
-  transition: width .3s ease;
+  transition: width 0.3s ease;
 }
 /* .link span{
   display: inline-block;
@@ -100,7 +139,6 @@
   line-height: 1;
   padding: 0 0.25em;
   position: relative;} */
-
 
 .video1 {
   object-fit: cover;
@@ -172,7 +210,6 @@
     left: 0px;
   }
 }
-
 @media (max-width: 1024px) {
   .slidingHorizontal span {
     top: -89px;
@@ -212,7 +249,6 @@
     left: 240px;
   }
 }
-
 @media (max-width: 425px) {
   .slidingHorizontal span {
     top: -150px;
@@ -337,14 +373,13 @@
 }
 
 .fadeIn {
-  display: inline;
   text-indent: 8px;
 }
 .fadeIn span {
+  display: inline;
   animation: fadeEffect 10s linear infinite 0s;
   -ms-animation: fadeEffect 10s linear infinite 0s;
   -webkit-animation: fadeEffect 10s linear infinite 0s;
-
 }
 .fadeIn span:nth-child(2) {
   animation-delay: 2.5s;
@@ -366,6 +401,75 @@
   -ms-animation-delay: 10s;
   -webkit-animation-delay: 10s;
 } */
+
+@media (max-width: 425px) {
+  .fadeIn span {
+    display: inline;
+    /* top: -150px;
+    left: 118px; */
+  }
+  .fadeIn span:nth-child(2) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 130px; */
+  }
+  .fadeIn span:nth-child(3) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 118px; */
+  }
+  .fadeIn span:nth-child(4) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 130px; */
+  }
+}
+
+@media (max-width: 991.98px) {
+  .fadeIn span {
+    display: inline;
+    /* top: -150px;
+    left: 118px; */
+  }
+  .fadeIn span:nth-child(2) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 130px; */
+  }
+  .fadeIn span:nth-child(3) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 118px; */
+  }
+  .fadeIn span:nth-child(4) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 130px; */
+  }
+}
+
+@media (max-width: 425px) {
+  .fadeIn span {
+    display: inline;
+    /* top: -150px;
+    left: 118px; */
+  }
+  .fadeIn span:nth-child(2) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 130px; */
+  }
+  .fadeIn span:nth-child(3) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 118px; */
+  }
+  .fadeIn span:nth-child(4) {
+    visibility: hidden;
+    /* top: -122px;
+    left: 130px; */
+  }
+}
 
 /*FadeIn Animation*/
 @-moz-keyframes fadeEffect {
@@ -450,36 +554,36 @@
   }
 }
 
-.text_hidder{
-	display: inline;
-	text-indent: 8px;
+.text_hidder {
+  display: inline;
+  text-indent: 8px;
 }
 
-.text_hidder span{ 
-  animation: vertical 10s linear infinite 0s; 
-	-ms-animation: vertical 10s linear infinite 0s;
-	-webkit-animation: vertical 10s linear infinite 0s;
+.text_hidder span {
+  animation: vertical 10s linear infinite 0s;
+  -ms-animation: vertical 10s linear infinite 0s;
+  -webkit-animation: vertical 10s linear infinite 0s;
   margin-top: 5rem;
 }
-.text_hidder span:nth-child(2){
-	animation-delay: 2.5s;
-	-ms-animation-delay: 2.5s;
-	-webkit-animation-delay: 2.5s;
+.text_hidder span:nth-child(2) {
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
 }
-.text_hidder span:nth-child(3){
-	animation-delay: 5s;
-	-ms-animation-delay: 5s;
-	-webkit-animation-delay: 5s;
+.text_hidder span:nth-child(3) {
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s;
 }
-.text_hidder span:nth-child(4){
-	animation-delay: 7.5s;
-	-ms-animation-delay: 7.5s;
-	-webkit-animation-delay: 7.5s;
+.text_hidder span:nth-child(4) {
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s;
 }
-.text_hidder span:nth-child(5){
-	animation-delay: 10s;
-	-ms-animation-delay: 10s;
-	-webkit-animation-delay: 10s;
+.text_hidder span:nth-child(5) {
+  animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  -webkit-animation-delay: 10s;
 }
 
 @-moz-keyframes text_hidder {
@@ -565,34 +669,34 @@
 }
 
 /*Vertical Flip*/
-.verticalFlip{
-	display: inline;
-	text-indent: 8px;
+.verticalFlip {
+  display: inline;
+  text-indent: 8px;
 }
-.verticalFlip span{
-	animation: vertical 10s linear infinite 0s;
-	-ms-animation: vertical 10s linear infinite 0s;
-	-webkit-animation: vertical 10s linear infinite 0s;
-	color: #ffffff;
-	opacity: 0;
-	overflow: hidden;
-	position: absolute;
+.verticalFlip span {
+  animation: vertical 10s linear infinite 0s;
+  -ms-animation: vertical 10s linear infinite 0s;
+  -webkit-animation: vertical 10s linear infinite 0s;
+  color: #ffffff;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
   left: 0;
   top: 80px;
 }
 
 @media (max-width: 425px) {
-    /* .text_hidder span{ 
+  /* .text_hidder span{ 
       display: none;
       margin-top: 5rem;
     } */
   .verticalFlip span {
-    top: 28px;
-    left: -30px;
+    top: 60px;
+    left: -24px;
   }
   .verticalFlip span:nth-child(2) {
     top: 28px;
-    left: -30px;
+    left: -12px;
   }
   .verticalFlip span:nth-child(3) {
     top: 28px;
@@ -600,29 +704,51 @@
   }
   .verticalFlip span:nth-child(4) {
     top: 28px;
-    left: -30px;
+    left: 0px;
   }
 }
 
-.verticalFlip span:nth-child(2){
-	animation-delay: 2.5s;
-	-ms-animation-delay: 2.5s;
-	-webkit-animation-delay: 2.5s;
+@media (max-width: 991.98px) {
+  .verticalFlip span {
+    top: 0px;
+    left: 220px;
+  }
+  .verticalFlip {
+    max-width: 1400px;
+  }
+  .verticalFlip span:nth-child(2) {
+    top: 40px;
+    left: 240px;
+  }
+  .verticalFlip span:nth-child(3) {
+    top: 40px;
+    left: 220px;
+  }
+  .verticalFlip span:nth-child(4) {
+    top: 40px;
+    left: 258px;
+  }
 }
-.verticalFlip span:nth-child(3){
-	animation-delay: 5s;
-	-ms-animation-delay: 5s;
-	-webkit-animation-delay: 5s;
+
+.verticalFlip span:nth-child(2) {
+  animation-delay: 2.5s;
+  -ms-animation-delay: 2.5s;
+  -webkit-animation-delay: 2.5s;
 }
-.verticalFlip span:nth-child(4){
-	animation-delay: 7.5s;
-	-ms-animation-delay: 7.5s;
-	-webkit-animation-delay: 7.5s;
+.verticalFlip span:nth-child(3) {
+  animation-delay: 5s;
+  -ms-animation-delay: 5s;
+  -webkit-animation-delay: 5s;
 }
-.verticalFlip span:nth-child(5){
-	animation-delay: 10s;
-	-ms-animation-delay: 10s;
-	-webkit-animation-delay: 10s;
+.verticalFlip span:nth-child(4) {
+  animation-delay: 7.5s;
+  -ms-animation-delay: 7.5s;
+  -webkit-animation-delay: 7.5s;
+}
+.verticalFlip span:nth-child(5) {
+  animation-delay: 10s;
+  -ms-animation-delay: 10s;
+  -webkit-animation-delay: 10s;
 }
 /* .verticalFlip{
   display: inline-block;
@@ -778,30 +904,84 @@
 } */
 
 /*Vertical Flip Animation*/
-@-moz-keyframes vertical{
-	0% { opacity: 0; }
-	5% { opacity: 0; -moz-transform: rotateX(180deg); }
-	10% { opacity: 1; -moz-transform: translateY(0px); }
-	25% { opacity: 1; -moz-transform: translateY(0px); }
-	30% { opacity: 0; -moz-transform: translateY(0px); }
-	80% { opacity: 0; }
-	100% { opacity: 0;}
+@-moz-keyframes vertical {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -moz-transform: rotateX(180deg);
+  }
+  10% {
+    opacity: 1;
+    -moz-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -moz-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -moz-transform: translateY(0px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
-@-webkit-keyframes vertical{
-	0% { opacity: 0; }
-	5% { opacity: 0; -webkit-transform: rotateX(180deg); }
-	10% { opacity: 1; -webkit-transform: translateY(0px); }
-	25% { opacity: 1; -webkit-transform: translateY(0px); }
-	30% { opacity: 0; -webkit-transform: translateY(0px); }
-	80% { opacity: 0; }
-	100% { opacity: 0; }
+@-webkit-keyframes vertical {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -webkit-transform: rotateX(180deg);
+  }
+  10% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -webkit-transform: translateY(0px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
-@-ms-keyframes vertical{
-	0% { opacity: 0; }
-	5% { opacity: 0; -ms-transform: rotateX(180deg); }
-	10% { opacity: 1; -ms-transform: translateY(0px); }
-	25% { opacity: 1; -ms-transform: translateY(0px); }
-	30% { opacity: 0; -ms-transform: translateY(0px); }
-	80% { opacity: 0; }
-	100% { opacity: 0; }
+@-ms-keyframes vertical {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+    -ms-transform: rotateX(180deg);
+  }
+  10% {
+    opacity: 1;
+    -ms-transform: translateY(0px);
+  }
+  25% {
+    opacity: 1;
+    -ms-transform: translateY(0px);
+  }
+  30% {
+    opacity: 0;
+    -ms-transform: translateY(0px);
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
