--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,10 @@
   .nav-bar-btn {
     @apply rounded-full flex items-center justify-center px-3 py-2 cursor-pointer;
   } */
+
+  .nav-bar-menu-span{
+    @apply hover:px-9 px-3 relative before:content-[''] before:transition-width before:delay-100 before:ease-in-out hover:before:content-link  before:h-0 hover:before:h-3 before:absolute before:left-0 hover:before:-left-2.5 before:top-0.5 hover:before:absolute after:content-[''] after:transition-width after:delay-100 after:ease-in hover:after:content-link  after:h-0 hover:after:h-3 after:absolute after:right-0 hover:after:-right-2.5 after:top-0.5 hover:after:absolute;
+  }
   .nav-bar-container {
     @apply flex justify-between items-center fixed top-0 right-0  ;
   }
@@ -28,7 +32,7 @@
     @apply block text-2xl lg:text-3xl font-bold uppercase px-4 py-3 lg:py-8 hover:text-white;
   }
   .nav-bar-has-sublink {
-    @apply flex justify-between w-full  px-4 lg:px-0 py-3 lg:pb-0 lg:py-0 group-hover:bg-gray-100  border-b-2 border-gray-100 border-solid lg:border-b-0;
+    @apply flex justify-between w-full px-4 lg:px-0 py-3 lg:pb-0 lg:py-0 group-hover:bg-gray-100  border-b-2 border-gray-100 border-solid lg:border-b-0;
   }
 
   .nav-bar-sublink-conatiner {
