--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -11,6 +11,12 @@
   transition: height 1s ease;
 }
 
+.floating_video{
+  top: 0px;
+  right: 170px;
+  position: absolute;
+}
+
 .close_dropdown_header {
   transition: height 0.8s cubic-bezier(0.3, 1, 0.3, 1) 0.1s;
   height: 0%;
