--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -11,7 +11,7 @@
   transition: height 1s ease;
 }
 
-.floating_video{
+.floating_video {
   top: 0px;
   right: 170px;
   position: absolute;
@@ -453,7 +453,6 @@
     /* top: -122px;
     left: 130px; */
   }
-
 }
 
 /*FadeIn Animation*/
@@ -552,8 +551,6 @@
   opacity: 0;
   overflow: hidden;
   position: absolute;
-  left: 0;
-  top: 80px;
   width: 610px;
 }
 
@@ -582,8 +579,8 @@
 
 @media (min-width: 426px) and (max-width: 991px) {
   .verticalFlip span {
-    top: 95px;
-    left: -38px;
+    top: 108px;
+    left: -42px;
     width: auto;
   }
   .verticalFlip {
@@ -591,23 +588,23 @@
   }
   .verticalFlip span:nth-child(2) {
     top: 55px;
-    left: -36px;
+    left: -15px;
     width: 335px;
   }
   .verticalFlip span:nth-child(3) {
     top: 55px;
-    left: -36px;
+    left: -60px;
     width: auto;
   }
   .verticalFlip span:nth-child(4) {
     top: 55px;
-    left: -36px;
+    left: -25px;
     width: 300px;
   }
 }
 @media (min-width: 992px) and (max-width: 1279px) {
   .verticalFlip span {
-    top: 50px;
+    top: 60px;
     left: 0px;
     width: auto;
   }
@@ -615,22 +612,47 @@
     max-width: 1400px;
   }
   .verticalFlip span:nth-child(2) {
-    top:50px;
+    top: 60px;
     left: 0px;
     width: 580px;
   }
   .verticalFlip span:nth-child(3) {
-    top:50px;
+    top: 60px;
     left: 0px;
     width: auto;
   }
   .verticalFlip span:nth-child(4) {
-    top:50px;
+    top: 60px;
     left: 0px;
     width: 460px;
   }
 }
-@media (min-width: 1280px) {
+@media (min-width: 1280px) and (max-width: 1430px) {
+  .verticalFlip span {
+    top: 64px;
+    left: 0px;
+    width: auto;
+  }
+  .verticalFlip {
+    max-width: 1400px;
+  }
+  .verticalFlip span:nth-child(2) {
+    top: 64px;
+    left: 0px;
+    width: 580px;
+  }
+  .verticalFlip span:nth-child(3) {
+    top: 64px;
+    left: 0px;
+    width: auto;
+  }
+  .verticalFlip span:nth-child(4) {
+    top: 64px;
+    left: 0px;
+    width: 460px;
+  }
+}
+@media (min-width: 1539px) {
   .verticalFlip span {
     top: 80px;
     left: 0px;
@@ -640,17 +662,17 @@
     max-width: 1400px;
   }
   .verticalFlip span:nth-child(2) {
-    top:65px;
+    top: 80px;
     left: 0px;
     width: 580px;
   }
   .verticalFlip span:nth-child(3) {
-    top:65px;
+    top: 80px;
     left: 0px;
     width: auto;
   }
   .verticalFlip span:nth-child(4) {
-    top:65px;
+    top: 80px;
     left: 0px;
     width: 460px;
   }
