--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -553,27 +553,34 @@
   position: absolute;
   width: 610px;
 }
+.trn_div span{
+  padding-bottom: 4rem;
+}
 
 @media (max-width: 425px) {
   .verticalFlip span {
     top: 60px;
     left: -22px;
     width: auto;
+    
   }
   .verticalFlip span:nth-child(2) {
     top: 30px;
     left: -28px;
     width: 200px;
+    padding-bottom: 0px;
   }
   .verticalFlip span:nth-child(3) {
     top: 30px;
     left: -26px;
     width: auto;
+    padding-bottom: 0px;
   }
   .verticalFlip span:nth-child(4) {
     top: 30px;
     left: -30px;
     width: 200px;
+    padding-bottom: 0px;
   }
 }
 
