--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,8 @@
 @import "./css/theme.css";
 @import "./css/plugins.css";
 @import "./css/fitness-style.css";
+@import "~slick-carousel/slick/slick.css"; 
+@import "~slick-carousel/slick/slick-theme.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
