--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -7,6 +7,31 @@
 
 */
 
+.html5vid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+  opacity: 1;
+  transition: opacity .5s linear;
+}
+
+.html5vid video {
+  border: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  opacity: 1;
+}
+
 .slick-dots {
   position: relative !important;
   bottom: 0 !important;
@@ -413,7 +438,7 @@
 }
 
 .fadeIn {
-  text-indent: 8px;
+  /* text-indent: 8px; */
 }
 .fadeIn span {
   display: inline;
@@ -574,7 +599,7 @@
 /*Vertical Flip*/
 .verticalFlip {
   display: inline;
-  text-indent: 8px;
+  /* text-indent: 8px; */
 }
 .verticalFlip span {
   animation: vertical 12s linear infinite 0s;
