--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -26,10 +26,11 @@
   left: 50%;
   transform: translate(-50%,-50%);
   min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
+  min-height: 600px;
+  width: 100%;
+  height: 100%;
   opacity: 1;
+  object-fit: cover;
 }
 
 .slick-dots {
@@ -617,35 +618,31 @@
 
 @media (max-width: 425px) {
   .verticalFlip span {
-    top: 60px;
-    left: -22px;
+    top: 28px;
+    left: 0px;
     width: auto;
-    
   }
   .verticalFlip span:nth-child(2) {
     top: 30px;
-    left: -28px;
+    left: 0px;
     width: 200px;
-    padding-bottom: 0px;
   }
   .verticalFlip span:nth-child(3) {
     top: 30px;
-    left: -26px;
+    left: 0px;
     width: auto;
-    padding-bottom: 0px;
   }
   .verticalFlip span:nth-child(4) {
     top: 30px;
-    left: -30px;
+    left: 0px;
     width: 200px;
-    padding-bottom: 0px;
   }
 }
 
 @media (min-width: 426px) and (max-width: 991px) {
   .verticalFlip span {
-    top: 108px;
-    left: -42px;
+    top: 55px;
+    left: 0px;
     width: auto;
   }
   .verticalFlip {
@@ -653,17 +650,17 @@
   }
   .verticalFlip span:nth-child(2) {
     top: 55px;
-    left: -15px;
+    left: 0px;
     width: 335px;
   }
   .verticalFlip span:nth-child(3) {
     top: 55px;
-    left: -60px;
+    left: 0px;
     width: auto;
   }
   .verticalFlip span:nth-child(4) {
     top: 55px;
-    left: -25px;
+    left: 0px;
     width: 300px;
   }
 }
