--- a/src/styles/css/custom.css
+++ b/src/styles/css/custom.css
@@ -137,7 +137,7 @@
   opacity: 1;
   transition: opacity 2s cubic-bezier(0.16, 1.08, 0.38, 0.98) 0.3s;
   width: 2rem;
-  color: #1e6ea7;
+  color: #F8625C;
 }
 .navbar .link {
   transition: all 0.3s ease;
@@ -616,7 +616,7 @@
   padding-bottom: 4rem;
 }
 
-@media (max-width: 425px) {
+@media (max-width: 766px) {
   .verticalFlip span {
     top: 28px;
     left: 0px;
@@ -639,7 +639,7 @@
   }
 }
 
-@media (min-width: 426px) and (max-width: 991px) {
+@media (min-width: 767px) and (max-width: 991px) {
   .verticalFlip span {
     top: 55px;
     left: 0px;
